syntax = "proto3";
package blogcore;

option csharp_namespace = "BlogCore.Shared.v1.Post";

message GetPostsByBlogRequest {
  string blog_id = 1;
  int32 page = 2;
}

message GetPostsByBlogResponse {
  int32 total_items = 1;
  int32 total_pages = 2;
  repeated PostDto posts = 3;
}

message GetPostRequest {
  string blog_id = 1;
  string post_id = 2;
}

message GetPostResponse {
  PostDto post = 1;
}

message CreatePostRequest {
  string title = 1;
  string body = 2;
  string excerpt = 3;
  string blog_id = 4;
  string author_id = 5;
  repeated string tags = 6;
}

message CreatePostResponse {
  PostDto post = 1;
}

message UpdatePostRequest {
  string id = 1;
  string title = 2;
  string body = 3;
  string excerpt = 4;
  repeated string tags = 5;
}

message UpdatePostResponse {
  PostDto post = 1;
}

message CreateTagRequest {
  string name = 2;
  int32 frequency = 3;
}

message PostDto {
  string id = 1;
  string title = 2;
  string body = 3;
  string excerpt = 4;
  string slug = 5;
  string blog_id = 6;
  string author_id = 7;
  string created_at = 8;
  repeated TagDto Tags = 9;
}

message TagDto {
  string id = 1;
  string name = 2;
  int32 frequency = 3;
}